--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,29 +1,29 @@
 @font-face {
   font-family: rubik-bold;
-  src: url('../public/assets/fonts/Rubik-Bold.ttf');
+  src: url('../fonts/Rubik-Bold.ttf');
   font-display: swap;
 }
 
 @font-face {
   font-family: rubik-regular;
-  src: url('../public/assets/fonts/Rubik-Regular.ttf');
+  src: url('../fonts/Rubik-Regular.ttf');
   font-display: swap;
 }
 
 @font-face {
   font-family: rubik-light-italic;
-  src: url('../public/assets/fonts/Rubik-LightItalic.ttf');
+  src: url('../fonts/Rubik-LightItalic.ttf');
   font-display: swap;
 }
 
 @font-face {
   font-family: rubik-medium;
-  src: url('../public/assets/fonts/Rubik-Medium.ttf');
+  src: url('../fonts/Rubik-Medium.ttf');
   font-display: swap;
 }
 
 @font-face {
   font-family: courgette-regular;
-  src: url('../public/assets/fonts/Courgette-Regular.ttf');
+  src: url('../fonts/Courgette-Regular.ttf');
   font-display: swap;
 }
