--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2,7 +2,9 @@ html {
   scroll-behavior: smooth;
   font-family: courgette-regular;
 }
-
+body {
+  margin: 0;
+}
 p {
   margin-block-start: 0;
   margin-block-end: 0;
