--- a/domains/common/navbar/navbar.module.scss
+++ b/domains/common/navbar/navbar.module.scss
@@ -9,9 +9,10 @@
   .logo {
     margin: 0 auto;
     z-index: 10;
+    height: 195px;
   }
   .navBarMenu {
-    margin-top: -33px;
+    margin-top: -26px;
 
     z-index: 0;
     &:after {
