--- a/app/[collection]/page.module.scss
+++ b/app/[collection]/page.module.scss
@@ -5,3 +5,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px;
+}
