--- a/domains/cart/components/modal/modal.module.scss
+++ b/domains/cart/components/modal/modal.module.scss
@@ -7,3 +7,148 @@
   cursor: pointer;
   outline: inherit;
 }
+
+.dialog {
+  position: relative;
+  z-index: 50;
+
+  .childTransition {
+    position: fixed;
+    inset: 0;
+    opacity: 100;
+    backdrop-filter: blur(0.5px);
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .dialogPanel {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 60%;
+    flex-direction: column;
+    background-color: $white;
+    padding: 0 10px;
+    box-shadow: -7px 4px 15px -3px rgba(0, 0, 0, 0.1);
+
+    .dialogContainer {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .title {
+        font-family: rubik-medium;
+        color: $black;
+        margin-top: 15px;
+      }
+    }
+
+    .cartItem {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .imageContainer {
+      position: relative;
+      cursor: pointer;
+      overflow: hidden;
+
+      .imageModal {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .titleProduct {
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      min-width: 100px;
+    }
+    .itemRow {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 5px;
+    }
+    .buttonRow {
+      display: flex;
+      gap: 5px;
+    }
+  }
+}
+
+.closeButton {
+  @include square(20px);
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.totalShippingContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-bottom: 30px;
+}
+.totalContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+
+  .total {
+    color: $red;
+    font-family: rubik-medium;
+    font-size: $font-size-3;
+  }
+}
+
+.closeIcon {
+  border-radius: 50%;
+  @include square(20px);
+  background-color: $yellow;
+  color: $red;
+  padding: 5px;
+}
+
+.checkout {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: $font-size-2;
+  background-color: $yellow;
+  color: $red !important;
+  margin: 0 auto;
+  cursor: pointer;
+  padding: 10px;
+  max-width: 200px;
+}
+
+.panier {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: $font-size-2;
+  text-decoration: underline;
+  color: $red;
+  cursor: pointer;
+  padding: 10px;
+}
