--- a/domains/page-accueuil/carrousel/carrousel.module.scss
+++ b/domains/page-accueuil/carrousel/carrousel.module.scss
@@ -50,6 +50,11 @@
   position: absolute;
   padding: 0;
   text-align: center;
+  [class*='slick-active'] {
+    button {
+      background-color: $yellow;
+    }
+  }
 }
 
 .dots li {
