--- a/app/[collection]/page.module.scss
+++ b/app/[collection]/page.module.scss
@@ -8,6 +8,7 @@
 
 .gridContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 40px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 140px;
+  grid-column-gap: 40px;
 }
