--- a/domains/common/footer/footer.module.scss
+++ b/domains/common/footer/footer.module.scss
@@ -1,3 +1,42 @@
 .container {
   width: 100%;
+  position: relative;
+  font-family: rubik-regular;
+  font-size: $font-size-1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 50px 0;
+  gap: 25px;
+
+  .pages {
+    color: $gray;
+  }
+}
+
+.shippingAndPayment {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 40px;
+  justify-content: center;
+
+  .logoColissimo {
+    display: inline-block;
+    height: 100%;
+    padding-right: 40px;
+    border-right: 2px solid #ffed00;
+  }
+
+  .logoStripe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .logo {
+      margin-left: 5px;
+    }
+  }
 }
