--- a/styles/_breakpoints.scss
+++ b/styles/_breakpoints.scss
@@ -2,6 +2,7 @@ $xs-width: 360px;
 $sm-width: 700px;
 $md-width: 1000px;
 $lg-width: 1440px;
+$container-product: 770px;
 
 @mixin below($maxWidth) {
   @media (max-width: $maxWidth) {
