--- a/styles/base.scss
+++ b/styles/base.scss
@@ -34,3 +34,13 @@ a {
     color: inherit;
   }
 }
+
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
