--- a/domains/common/components/navbar/navbar.module.scss
+++ b/domains/common/components/navbar/navbar.module.scss
@@ -16,10 +16,10 @@
 
     z-index: 0;
     &:after {
-      content: url('../../../public/images/header/Separateur.png');
+      content: url('../../../../public/images/header/Separateur.png');
     }
     &:before {
-      content: url('../../../public/images/header/Separateur.png');
+      content: url('../../../../public/images/header/Separateur.png');
     }
   }
 }
@@ -65,7 +65,7 @@
 .logoReseau {
   width: 166px;
   height: 116px;
-  background: url('../../../public/images/header/reseaux.png') center no-repeat;
+  background: url('../../../../public/images/header/reseaux.png') center no-repeat;
   display: flex;
   flex-direction: column;
 
