--- a/domains/common/components/navbar/mobile-menu.module.scss
+++ b/domains/common/components/navbar/mobile-menu.module.scss
@@ -5,4 +5,19 @@
 .listItems {
   list-style: none;
   padding: 0;
+  font-family: rubik-regular;
+  font-size: $font-size-3;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.closeButton{
+  @include square(24px);
+  right: 0;
+  position: absolute;
+  margin: 10px;
+}
+.isActive{
+  color:$red;
+
 }
