--- a/domains/page-accueuil/components/carrousel/carrousel.module.scss
+++ b/domains/page-accueuil/components/carrousel/carrousel.module.scss
@@ -1,6 +1,10 @@
 .container {
   width: $md-width;
-  // [class*="slick-slider"]{margin-top: 40px;}
+
+  @include below-md {
+    width: 100%;
+  }
+
   [class*='slick-track'] {
     display: flex;
     flex-direction: row;
