--- a/app/[collection]/page.module.scss
+++ b/app/[collection]/page.module.scss
@@ -11,4 +11,8 @@
   grid-template-columns: repeat(4, 1fr);
   grid-row-gap: 40px;
   grid-column-gap: 40px;
+
+  @include below-sm {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
