--- a/domains/page-accueuil/components/acceuil-avantages/acceuil-avantages.module.scss
+++ b/domains/page-accueuil/components/acceuil-avantages/acceuil-avantages.module.scss
@@ -12,13 +12,20 @@
     height: 50px;
     margin-bottom: 50px;
     font-size: $font-size-6;
+    @include below-md {
+      font-size: $font-size-4;
+      width: 100%;
+      height: inherit;
+    }
   }
 
   .cards {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    @include below-md {
+      flex-direction: column;
+    }
     .card {
       text-align: center;
 
