--- a/domains/cart/components/cart-page/cart-page.module.scss
+++ b/domains/cart/components/cart-page/cart-page.module.scss
@@ -31,6 +31,11 @@
     @include square(64px);
   }
 
+  @include below-sm {
+    display: none;
+    padding-left: 5px;
+  }
+
   .imageItem {
     width: 100%;
     height: 100%;
@@ -59,6 +64,7 @@
     margin: 0;
     padding: 0;
   }
+  
   .price {
     width: 110px;
     text-align: right;
@@ -92,6 +98,12 @@
   &:last-child {
     border-bottom: 1px solid $yellow;
   }
+
+  @include below-sm {
+    font-size: $font-size-1;
+    padding-left: 5px;
+    overflow: scroll;
+  }
 }
 
 .titleProduct {
@@ -102,6 +114,7 @@
   gap: 10px;
   color: $red;
 }
+
 .link {
   min-width: 230px;
   height: 50px;
