--- a/app/product/[handle]/page.module.scss
+++ b/app/product/[handle]/page.module.scss
@@ -18,6 +18,11 @@
   width: 100%;
 }
 
+.fournisseur {
+  font-family: rubik-regular;
+  font-size: $font-size-3;
+}
+
 .separateur {
   width: 100%;
   height: 3px;
