--- a/app/product/[handle]/page.module.scss
+++ b/app/product/[handle]/page.module.scss
@@ -21,6 +21,7 @@
 .fournisseur {
   font-family: rubik-regular;
   font-size: $font-size-3;
+  margin: 0;
 }
 
 .separateur {
@@ -52,6 +53,7 @@
 .title {
   color: $red;
   font-size: $font-size-5;
+  margin: 0;
 }
 
 .description {
