--- a/domains/product/components/variant-selector/variant-selector.module.scss
+++ b/domains/product/components/variant-selector/variant-selector.module.scss
@@ -8,4 +8,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &:focus,
+  &:active {
+    border: $yellow solid 2px;
+    outline: 0 !important;
+  }
 }
