--- a/domains/common/components/navbar/search.module.scss
+++ b/domains/common/components/navbar/search.module.scss
@@ -1,15 +1,15 @@
-.search{
+.search {
   justify-content: center;
   display: flex;
   margin-top: 20px;
 }
 
-.searchInput{
+.searchInput {
   font-family: rubik-regular;
   font-size: $font-size-2;
   border: none;
-  
-  &:focus{
-    outline: none;
+  padding: 0 10px;
+  &:focus {
+    outline: 2px solid $yellow;
   }
 }
