--- a/domains/common/components/navbar/search.module.scss
+++ b/domains/common/components/navbar/search.module.scss
@@ -9,7 +9,12 @@
   font-size: $font-size-2;
   border: none;
   padding: 0 10px;
-  &:focus {
+  &:focus, .isNotEmpty {
     outline: 2px solid $yellow;
   }
+
+}
+
+.isNotEmpty {
+  outline: 2px solid $yellow;
 }
