--- a/domains/common/components/navbar/search.module.scss
+++ b/domains/common/components/navbar/search.module.scss
@@ -1,7 +1,6 @@
 .search {
   justify-content: center;
   display: flex;
-  margin-top: 20px;
 }
 
 .searchInput {
@@ -9,10 +8,9 @@
   font-size: $font-size-2;
   border: none;
   padding: 0 10px;
-  &:focus, .isNotEmpty {
+  &:focus {
     outline: 2px solid $yellow;
   }
-
 }
 
 .isNotEmpty {
