--- a/domains/product/components/edit-item-quantity-button-product-page/edit-item-quantity-button-product-page.module.scss
+++ b/domains/product/components/edit-item-quantity-button-product-page/edit-item-quantity-button-product-page.module.scss
@@ -22,10 +22,7 @@
 .isPending {
   cursor: not-allowed;
 }
-.plusIcon {
-  @include square(20px);
-}
 
-.minusIcon {
-  @include square(20px);
+.icon {
+  aspect-ratio: 1;
 }
