--- a/domains/grid/components/grid_product-labels/grid-product-labels.module.scss
+++ b/domains/grid/components/grid_product-labels/grid-product-labels.module.scss
@@ -21,6 +21,10 @@
   background-color: $yellow;
   padding: 10px 20px;
   color: $red;
+
+  @include below-sm {
+    text-align: center;
+  }
 }
 .vendor {
   font-family: rubik-regular;
