--- a/domains/cart/components/modal/modal.module.scss
+++ b/domains/cart/components/modal/modal.module.scss
@@ -49,10 +49,10 @@
     padding: 0;
   }
   .price {
-    width: 110px;
     text-align: right;
     display: flex;
     gap: 5px;
+    padding-right: 10px;
     justify-content: flex-end;
 
     .amount {
@@ -69,20 +69,25 @@
 }
 
 .cartItem {
-  display: flex;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
   border-top: 1px solid $yellow;
   border-left: 1px solid $yellow;
   border-right: 1px solid $yellow;
   justify-content: space-between;
-  padding-right: 25px;
   font-size: $font-size-3;
   &:last-child {
     border-bottom: 1px solid $yellow;
   }
 }
-
+.cartProductVariant {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
 .imageContainer {
   position: relative;
   cursor: pointer;
@@ -113,7 +118,11 @@
 }
 
 .variantItem {
-  width: 30px;
+  width: 120px;
+
+  @include below-lg {
+    width: 41px;
+  }
 }
 
 .buttonRow {
