--- a/domains/layout/components/product-grid-items/product-grid-items.module.scss
+++ b/domains/layout/components/product-grid-items/product-grid-items.module.scss
@@ -1,10 +1,31 @@
 .gridItem {
   position: relative;
   width: 215px;
+  transition: all 0.2s;
+
+  &:hover {
+    transform: translateY(-2px);
+  }
+
   .promo {
     position: absolute;
     top: -10px;
     left: -10px;
     z-index: 10;
+  }
+}
+
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 40px;
+  grid-column-gap: 40px;
+
+  @include below-md {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include below-sm {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
