--- a/app/search/layout.module.scss
+++ b/app/search/layout.module.scss
@@ -1,6 +1,6 @@
 .container {
-  display: grid;
-  grid-template-columns: 5fr 1fr;
+  display: flex;
+  flex-direction: row;
   justify-content: flex-start;
   width: 100%;
   margin: 0 auto;
