--- a/domains/page-accueuil/components/carrousel/carrousel.module.scss
+++ b/domains/page-accueuil/components/carrousel/carrousel.module.scss
@@ -45,7 +45,7 @@
     border-left: 0;
     border-right: 0;
     border-top: 0;
-    border-image: url('../../../../public/images/header/Separateur.png') 42;
+    border-image: url('../../../../public/images/header/Separateur.webp') 42;
   }
   .value {
     display: flex;
